--- a/src/style.css
+++ b/src/style.css
@@ -1,96 +1,178 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --dk-color:#bf776b;
+  --mid-color:#f2b1a4;
+  --lt-color:#ffe8e3;
+  --dkest-color:#8e534a;
+   --accent:#226051;
+}
+html, body {
+  margin:0;
+  padding-top:25px;
+  padding:0;
+  height:100%;
+  font-family: 'Courier New', monospace;
+  font-size:11px;
+  background-image:url('https://neothemes.neocities.org/images/roses-bg.gif');
+  background-repeat:repeat;
+  color:var(--dkest-color);
+  padding:1px;
+  overflow-y:hidden;
+}
+body a {
+color:var(--accent);
+font-weight:bold;
+}
+#container {
+  max-width:900px;
+  margin:0 auto;
+  margin-top:15px;
+  height:100%;
+}
+h1, h3, h5 {
+  color:var(--dk-color);
+}
+h2, h4, h6 {
+  color:var(--accent);
+}
+#header {
+  max-width:850px;
+  height:90px;
+  margin-left:5px;
+  margin-right:5px;
+  margin:0 auto;
+  background-color:var(--lt-color);
+  border:1px solid var(--dkest-color);
+}
+.title {
+  font-size:35px;
+  text-align:center;
+  font-style:italic;
+}
+#wrapper {
+  margin:0 auto;
+  max-width:860px;
+}
+.content {
+padding:10px;
+}
+#two-boxes {
+  display:flex;
+  flex-wrap:wrap;
+  max-width:900px;
+}
+.box-one, .box-two {
+  border:1px solid var(--dkest-color);
+  background-color:var(--lt-color);
+  overflow:auto;
+}
+.box-one {
+  height:500px;
+  width:200px;
+  margin-left:5px;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  margin-top:5px;
+  margin-right:5px;
+}
+.box-two {
+  height:500px;
+  width:636px;
+  margin-left:5px;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin-top:5px;
+  margin-right:5px;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.section-title {
+  text-align:center;
+  font-weight:bold;
+  padding-top:5px;
+  padding-bottom:5px;
+  background-color:var(--mid-color);
+  color:var(--dkest-color);
+  font-size:12px;
 }
-a:hover {
-  color: #535bf2;
+.nav-wrapper {
+  display:flex;
+  flex-wrap:wrap;
+  width:400px;
+  height:50px;
+  margin:0 auto;
+  justify-content:space-evenly;
+  margin-top:5px;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  width:190px;
+  height:35px;
+  background-color:var(--mid-color);
+  color:var(--dkest-color);
+  font-weight:bold;
+  border:none;
+  margin-top:5px;
+  margin-right:5px;
 }
-button:hover {
-  border-color: #646cff;
+button a {
+ color:var(--accent);
+ font-weight:bold;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+p {
+  padding:5px;
+}
+p a {
+color:var(--dkest-color);
+font-weight:bold;
+}
+.scroll::-webkit-scrollbar-track {
+  background-color: var(--lt-color);
+}
+.scroll::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f2b1a4;
+}
+.scroll::-webkit-scrollbar-thumb {
+  background-color: var(--dk-color);
+}
+#footer {
+  text-align:center;
+  padding-top:5px;
+  margin-bottom:5px;
+}
+#footer p {
+  background-color:white;
+  display:block;
+  max-width: 350px;
+  margin:0 auto;
+  margin-top:5px;
+  margin-bottom:5px;
+  padding:5px;
+}
+textarea {
+background-color:var(--dkest-color);
+color:var(--lt-color);
+font-size:10px;
+}
+@media only screen and (max-width: 860px) {
+  html, body {
+      overflow:visible;
+ }
+ #header {
+   width:97.6%;
+ }
+  #container {
+      width:100%;
+ }
+  .box-one, .box-two {
+      width:100%;
+ }
+ .box-two {
+   order:1;
+ }
+ .box-one {
+   order:2;
+ }
+  .two-boxes {
+      width:100%;
+ }
+  .wrapper {
+      width:100%;
+ }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
