--- a/src/style.css
+++ b/src/style.css
@@ -177,3 +177,15 @@ font-size:10px;
  }
 }
 
+.background-cat {
+  z-index: -1;
+  position: absolute;
+
+}
+
+.cat-background {
+  background-image: url("gatto.gif");
+  background-repeat: repeat;
+  height: 100%;
+  width: 100%;
+}
