--- a/src/style.css
+++ b/src/style.css
@@ -183,6 +183,17 @@ font-size:10px;
 
 }
 
+.visualizer {
+  height: 80%;
+  width: 80%;
+  
+  min-width: 400;
+  min-height: 400;
+  top: 10%;
+  left: 10%;
+}
+
+.vis-div
 .cat-background {
   background-image: url("gatto.gif");
   background-repeat: repeat;
