--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,6 @@ padding:10px;
   height:500px;
   width:200px;
   margin-left:5px;
-
   margin-top:5px;
   margin-right:5px;
 }
@@ -77,7 +76,6 @@ padding:10px;
   height:500px;
   width:636px;
   margin-left:5px;
-
   margin-top:5px;
   margin-right:5px;
 }
@@ -139,11 +137,13 @@ font-weight:bold;
 #footer p {
   background-color:white;
   display:block;
-  max-width: 700px;
   margin:0 auto;
+  margin-left:5px;
   margin-top:5px;
+  margin-right:5px;
   margin-bottom:5px;
-  padding:5px;
+
+
 }
 textarea {
 background-color:var(--dkest-color);
